--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "inquirer": "^8.2.4"
-  },
-  "devDependencies": {
+    "inquirer": "^8.2.4",
+    "winston": "^3.7.2",
     "chalk": "^4.1.2"
   }
 }
