chore(deps): upgrade qs to >=6.7.3

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "inquirer": "^8.2.4",
     "winston": "^3.7.2",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "qs": ">=6.7.3"
   }
 }
